# ai-marketplace

./: .aiignore  .gitignore  CONTRIBUTING.md  DAILY_KEY_ROTATION.md  DAILY_KEY_ROTATION_SECRETS.md  INSTALL.md  LICENSE  MIGRATION_NOTES.md  PHASE10_CHECKLIST.txt  PHASE10_COMPLETION.txt  PHASE6_COMPLETION.txt  PHASE6_SUMMARY.md  README.md  index.json  index.json.sha512  marketplace.db  marketplace.tree  search-index.json  strip.py
.github/: copilot-instructions.md  dependabot.yml  plan-task-section.md
.github/ISSUE_TEMPLATE/: new-agent.md  new-skill.md
.github/workflows/: create_index.yml  notify_release.yml  recreate_release.yml  rotate_gpg_daily.yml  rotate_keys_daily.yml  security-audit.yml  sync-marketplace.yml  test_rotate_keys_daily.yml  validate-paths.yml  validate.yml
agents/: AGENT_FACTORY.md  agent-list.txt  audiovideo-analyst.md  certificate-analyst.md  code-reviewer.md  command-verifier.md  cpp-developer.md  cybersec-agent.md  cybersec-analyst.md  filesystem-analyst.md  firmware-analyst.md  frontend-design.md  index.json  kernel-analyst.md  layer2-specialist.md  layer3-specialist.md  layer4-specialist.md  layer5-specialist.md  layer6-specialist.md  layer7-specialist.md  logfile-analyst.md  memory-analyst.md  network-analyst.md  persistence-analyst.md  postgres-db-engineer.md  process-analyst.md  python-code-reviewer.md  python-developer.md  reverse-engineer.md  rubber-duck.md  senior-frontend.md  settings-analyst.md  steganography-analyst.md  threat-modeler.md  token-optimizer.md  vuln-scanner.md  watchdog.md
agents/teams/: index.json
docs/: AGENT_SCHEMA.md  BOOTSTRAP.md  CHANGELOG_PHASE10.md  CHANGELOG_PHASE6.md  CHANGELOG_PHASE7.md  CHANGELOG_PHASE9.md  CSCI_TRANSITION_STRATEGY.md  MCP_DEPENDENCY_GRAPH.md  METADATA_SCHEMA.md  SKILL_SCHEMA.md  TESTING_STRATEGY.md  TOOL_NAME_MAPPING.md  phase12-session1-summary.md
mcps/: index.json  initialize-response.json  mcp-config.json  prompts-list-parsed.json  prompts-list-response.json  resources-list-parsed.json  resources-list-response.json  resources-templates-list-parsed.json  resources-templates-list-response.json  source-fetch-manifest.json  tool-add_comment_to_pending_review.json  tool-add_issue_comment.json  tool-add_reply_to_pull_request_comment.json  tool-create_branch.json  tool-create_or_update_file.json  tool-create_pull_request.json  tool-create_pull_request_with_copilot.json  tool-create_repository.json  tool-delete_file.json  tool-get_commit.json  tool-get_copilot_job_status.json  tool-get_file_contents.json  tool-get_label.json  tool-get_latest_release.json  tool-get_me.json  tool-get_release_by_tag.json  tool-get_tag.json  tool-get_team_members.json  tool-get_teams.json  tool-issue_read.json  tool-issue_write.json  tool-list_branches.json  tool-list_commits.json  tool-list_issue_types.json  tool-list_issues.json  tool-list_pull_requests.json  tool-list_releases.json  tool-list_repository_collaborators.json  tool-list_tags.json  tool-pull_request_read.json  (+14 more)
mcps/_template/: LICENSE  README.md  pyproject.toml
mcps/_template/.github/workflows/: ci.yaml
mcps/_template/src/mcp_template/: __init__.py  __main__.py  _sdk_compat.py
mcps/_template/src/mcp_template/tools/: __init__.py
mcps/_template/tests/: conftest.py  test_tools.py
mcps/agent-mcp/: README.md  pyproject.toml
mcps/ai-memory/: README.md  pyproject.toml
mcps/api-security/: pyproject.toml
mcps/api-security-mcp/: README.md  pyproject.toml
mcps/api-security/src/api_security/: __init__.py  __main__.py
mcps/database-forensics/: pyproject.toml
mcps/database-forensics/src/database_tools/: __main__.py
mcps/database-forensics/src/mcp_database_tools/: __main__.py
mcps/database-forensics/tests/: test_csscore_core.py
mcps/incident-response-mcp/: pyproject.toml
mcps/quo-pricing-mcp/: README.md  pyproject.toml
mcps/quo-pricing-mcp/src/quo_pricing_mcp/: __init__.py  __main__.py  tools.py
mcps/quo-pricing-mcp/tests/: test_tools.py
mcps/red-team-ops/: pyproject.toml
mcps/red-team-ops/src/red_team_ops/: __init__.py  tools.py
mcps/red-team-ops/tests/: test_tools.py
mcps/template-mcp/: README.md  pyproject.toml  tools.md  tools_metadata.json
mcps/template-mcp/src/template_mcp/: __init__.py  __main__.py  tools.py
mcps/template-mcp/tests/: test_tools.py
mcps/thinking-mcp/: README.md  pyproject.toml
mcps/thinking-mcp/src/thinking_mcp/: __init__.py  __main__.py  tools.py
mcps/thinking-mcp/tests/: test_tools.py
mcps/threat-actor-intelligence/: pyproject.toml
mcps/threat-actor-intelligence/src/mcp_threat_intelligence/: __init__.py  __main__.py
mcps/tool-toggle-mcp/: README.md  pyproject.toml
mcps/tool-toggle-mcp/src/tool_toggle_mcp/: __init__.py  __main__.py  tools.py
mcps/tool-toggle-mcp/tests/: test_tools.py
rules/: README.md  arch-module-order.md  arch-no-deletion.md  arch-phases.md  arch-plan-venv.md  arch-source.md  code-announce-completions.md  code-base-emitter.md  code-chat.md  code-dataclass-legacy.md  code-explicit-imports.md  code-hook-split.md  code-no-any-comments.md  code-no-bare-exception.md  code-no-coauthored-by.md  code-no-future-annotations.md  code-no-global.md  code-no-import-try.md  code-no-quoted-annotations.md  code-oop-practices.md  code-prefer-async.md  code-singleton-meta.md  code-stack-choices.md  css-plan-start.md  env-dependency-analyzer.md  env-docker-db.md  env-fix-violations.md  env-manage-py.md  env-session-db.md  env-venv.md  env-workingdir.md  index.json  init-project-prompt.md  plan-auto-exec.md  plan-git-track.md  plan-local-sync.md  plan-no-backcompat.md  plan-plan-md.md  plan-preserve-patterns.md  plan-runtime.md  (+14 more)
scripts/: audit_helper_imports.py  audit_tool_inventory.py  enrich_keywords.py  generate_index.py  install-mcp-core.sh  install-mcp.sh  install.sh  refresh-flat-index.sh  update_counters.py  validate.sh
skills/: README.md  full_migrate.py  index.json  index_utils.py  linux_prefix_map.py  migrate.py  skill_migration_utils.py
teams/: index.json
templates/: plan-phase-section.md
workflows/: index.json  loop-ruff-fix.md  task-workflow.md  todo-workflow.md
(+5441 files in other folders)
