[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-template"
version = "0.1.0"
description = "Template for CyberSecSuite externalized MCPs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CyberSecSuite", email = "dev@cybersecsuite.local" }
]

dependencies = [
    # MCP SDK - CRITICAL: FastMCP protocol implementation
    "fastmcp>=3.1.0",
    # Data validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Type hints backport
    "typing-extensions>=4.0",
]

[project.scripts]
mcp-template = "mcp_template.__main__:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_template"]

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    # Linting & formatting
    "ruff>=0.1.0",
    "black>=23.0",
    # Type checking
    "mypy>=1.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]
select = ["E", "F", "W", "B", "I"]
ignore = ["E501", "E203"]

[tool.ruff.lint]
preview = true

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
pretty = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=mcp_template --cov-report=term-only --cov-report=html"
