[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-database-tools"
version = "1.0.0"
description = "Database forensics, schema analysis, and artifact extraction"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CyberSecSuite", email = "dev@cybersecsuite.local" }
]

dependencies = [
    "fastmcp>=3.1.0",
    "pydantic>=2.0",
    "mcp-csscore @ file:///home/daen/Projects/ai-marketplace/mcps/csscore",
]

[project.scripts]
mcp-database-tools = "mcp_database_tools.__main__:main"

[tool.uv]
[tool.hatch.metadata]
allow-direct-references = true

package = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_database_tools"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
preview = true

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=mcp_database_tools --cov-report=term-missing --cov-fail-under=10"

[tool.coverage.run]
omit = ["src/mcp_database_tools/__main__.py"]
