[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-incident-management"
version = "1.0.0"
description = "incident-management MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CyberSecSuite", email = "dev@cybersecsuite.local" }
]

dependencies = [
    "fastmcp>=3.1.0",
    "pydantic>=2.0",
    "mcp-csscore @ file:///home/daen/Projects/ai-marketplace/mcps/csscore",
]

[project.scripts]
mcp-incident-management = "incident_management.__main__:main"

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/incident_management"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
[[tool.mypy.overrides]]
module = "mcp_csscore"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short"
