[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template-mcp"
version = "1.0.0"
description = "template-mcp"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CyberSecSuite", email = "dev@cybersecsuite.local" }
]

dependencies = [
    "fastmcp>=3.1.0",
    "pydantic>=2.0",
]

[project.scripts]
template-mcp = "template_mcp.__main__:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/template_mcp"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short"
