[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thinking-mcp"
version = "1.0.0"
description = "thinking-mcp"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CyberSecSuite", email = "dev@cybersecsuite.local" }
]

dependencies = [
    "fastmcp>=3.1.0",
    "pydantic>=2.0",
]

[tool.uv]
package = true
