[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-threat-intelligence"
version = "1.0.0"
description = "Threat actor profiling, IOC enrichment, and intelligence aggregation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CyberSecSuite", email = "dev@cybersecsuite.local" }
]

dependencies = [
    "fastmcp>=3.1.0",
    "pydantic>=2.0",
    "mcp-csscore @ file:///home/daen/Projects/ai-marketplace/mcps/csscore",
]

[project.scripts]
mcp-threat-intelligence = "mcp_threat_intelligence.__main__:main"

[tool.uv]
[tool.hatch.metadata]
allow-direct-references = true

package = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_threat_intelligence"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
preview = true

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=mcp_threat_intelligence --cov-report=term-missing --cov-fail-under=10"

[tool.coverage.run]
omit = ["src/mcp_threat_intelligence/__main__.py"]
